Spacing fixes

--- a/src/components/Overview/OverviewPage/OverviewPage.module.scss
+++ b/src/components/Overview/OverviewPage/OverviewPage.module.scss
@@ -37,6 +37,6 @@
     .overview-page {
         --header-font-size: 2.5rem;
         --page-width: 750px;
-        --page-y-padding: 2rem;
+        --page-y-padding: 4rem;
     }
 }
