--- a/src/components/Pokedex/PokedexPage/PokedexPage.module.scss
+++ b/src/components/Pokedex/PokedexPage/PokedexPage.module.scss
@@ -23,6 +23,6 @@
 @media screen and (min-width: constants.$tablet) {
     .pokedex-page {
         --page-width: 750px;
-        --page-y-spacing: 2rem;
+        --page-y-spacing: 4rem;
     }
 }
