--- a/src/components/RIPs/RIPsPage/RIPsPage.module.scss
+++ b/src/components/RIPs/RIPsPage/RIPsPage.module.scss
@@ -21,6 +21,6 @@
 @media screen and (min-width: constants.$tablet) {
     .rips-page {
         --header-font-size: 2.5rem;
-        --top-spacing: 4rem;
+        --page-y-padding: 4rem;
     }
 }
